[package]
name = "SystemComponentsFast"
version = "0.1.0"
authors = ["magMAR12 <SmileAtDeath@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = ">=0.12.1"
pyo3 = ">= 0.13.2"
rand = ">=0.8.3"
rand_distr = ">=0.4.0"
log = "~0.4"
pyo3-log = "0.3"
num-integer = "0.1.44"
ndarray = "0.14.0"

[lib]
name = "SystemComponentsFast"
crate-type = ["dylib"]
