[package]
name = "SystemComponentsFast"
version = "0.1.0"
authors = ["magMAR12 <SmileAtDeath@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = ">=0.12.1"
pyo3 = ">= 0.9.0"
rand = "0.7"
rand_distr = "0.3.0"

[lib]
name = "SystemComponentsFast"
crate-type = ["dylib"]
